--- a/templates/settings.html
+++ b/templates/settings.html
@@ -12,6 +12,16 @@
         <p>intensité de la luminosité : 37% </p>
         <p>délai d'envoi de données : 10 minutes</p>
 
+        <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="goPython()">
+
+        <script>
+              async function goPython () {
+              const resp = await fetch(`${document.location.protocol }//${document.location.host}/test_twilio.py`);
+              if (!resp.ok) throw "Request error";
+                console.log("finished python script");
+              }
+        </script>
+
         {% endblock %}
     </body>
 </html>
