--- a/templates/template.html
+++ b/templates/template.html
@@ -21,7 +21,7 @@
                             <a href="{{url_for('settings')}}">paramètres</a>
                         </li>
                         <li>
-                            <a href="{{url_for('settings')}}">statistiques</a>
+                            <a href="{{url_for('statistics')}}">statistiques</a>
                         </li>
                     </ul>
                 </nav></strong>
