--- a/templates/weather.html
+++ b/templates/weather.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>météo</title>
         <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
-        <link rel="stylesheet" href="static/css/weather_style.css">
+        <link rel="stylesheet" href="static/css/template.css">
     </head>
     <body>
         {% extends "template.html" %}
