--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>statistiques</title>
+        <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     </head>
     <body>
@@ -13,10 +14,10 @@
         <p>humidité de sol en fonction du temps </p>
         <p>température en fonction du temps</p>
 
-        <canvas id="lineChart" width="900" height="400"></canvas>
+        <canvas id="statsChart" width="550" height="300"></canvas>
         <script>
-            var ctx = document.getElementById("lineChart").getContext("2d");
-            var lineChart = new Chart(ctx, {
+            var ctx = document.getElementById("statsChart").getContext("2d");
+            var statsChart = new Chart(ctx, {
                 type: "line",
                 data: {
                     labels: {{ labels | safe }},
@@ -25,7 +26,7 @@
                             label: "humidité",
                             data: {{ values | safe }},
                             fill: false,
-                            borderColor: "rgb(157, 250, 181)",
+                            borderColor: "rgb(51, 92, 255)",
                             lineTension: 0.1
                         }
                     ]
