--- a/templates/settings.html
+++ b/templates/settings.html
@@ -9,6 +9,7 @@
     <body>
         {% extends "template.html" %}
         {% block content %}
+        <img id="dp_illustration" src="{{ url_for('static', filename='derrick_plant.jpg') }}" alt="illustration plante">
         <h1>Paramètres</h1>
         <p>intensité de la luminosité : 37% </p>
         <p>délai d'envoi de données : 10 minutes</p>
