--- a/templates/template.html
+++ b/templates/template.html
@@ -6,27 +6,21 @@
     <head>
         <meta charset="utf-8">
         <title>parent</title>
-        <link rel="stylesheet" href="{{url_for('static', filename='css/template.css') }}">
+        <!-- <link rel="stylesheet" href="{{url_for('static', filename='css/template.css') }}"> -->
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body>
+    <body class="bg-blue-300">
         <header>
             <div class="container">
-                <h1 class="navigation">Derrick</h1>
                 <strong><nav>
-                    <ul class="menu">
-                        <li>
-                            <a href="{{url_for('home')}}">accueil</a> <!-- calls the function url_for given the name of the fct as argument (the page it refers to)-->
-                        </li>
-                        <li>
-                            <a href="{{url_for('settings')}}">paramètres</a>
-                        </li>
-                        <li>
-                            <a href="{{url_for('statistics')}}">statistiques</a>
-                        </li>
-                        <li>
-                            <a href="{{url_for('get_weather')}}">météo</a>
-                        </li>
-                    </ul>
+                    <div class="fixed float-left h-screen w-16 bg-green-200">
+                        <div class="fixed flex flex-col h-10 w-10 mx-3 py-5">
+                            <div class="pb-3"><a href="{{url_for('home')}}"><img src="https://cdn-icons-png.flaticon.com/512/5729/5729968.png"></a></div>
+                            <div class="pb-3"><a href="{{url_for('settings')}}"><img src="https://cdn-icons-png.flaticon.com/512/5698/5698946.png"></a></div>
+                            <div class="pb-3"><a href="{{url_for('statistics')}}"><img src="https://cdn-icons-png.flaticon.com/512/5429/5429629.png"></a></div>
+                            <div class="pb-3"><a href="{{url_for('get_weather')}}"><img src="https://cdn-icons-png.flaticon.com/512/2046/2046254.png"></a></div>
+                        </div>
+                    </div>
                 </nav></strong>
             </div>
         </header>
