--- a/templates/settings.html
+++ b/templates/settings.html
@@ -3,43 +3,45 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>statistiques</title>
+        <title>paramètres</title>
+        
         <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+    
     </head>
     <body>
         {% extends "template.html" %}
         {% block content %}
-        <div class="pt-16 font-bold text-5xl">Statistiques</div>
+        <div class="pt-16 font-bold text-5xl ">Paramètres</div>
 
-
-        <div class="flex">
-            <div class="flex-col py-20">
-
-                <div class="mb-8 p-8 rounded-lg bg-blue-300 drop-shadow-2xl w-full">
-                    <canvas id="humChart" width="650" height="350"></canvas>
-                    <script type="text/javascript" src="{{ url_for('static', filename = 'js/moisture.js') }}"></script>
-                </div>
-
-                <div class="mb-8 p-8 rounded-lg bg-yellow-300 drop-shadow-2xl">
-                    <canvas id="tempChart" width="650" height="350"></canvas>
-                    <script type="text/javascript" src="{{ url_for('static', filename = 'js/temperature.js') }}"></script>
-                </div>
-
-                <div class="mb-8 p-8 rounded-lg bg-red-300 drop-shadow-2xl">
-                    <canvas id="levelChart" width="650" height="350"></canvas>
-                    <script type="text/javascript" src="{{ url_for('static', filename = 'js/water_lvl.js') }}"></script>
-                </div>
-
+        <img class =" justify-items-stretch xl:float-right pt-10 bg-transparent drop-shadow-xl" id="dp_illustration" src="{{ url_for('static', filename='derrick_plant.jpg') }}" alt="illustration plante">
+        <div>
+        <p class="pt-10 text-center font-extrabold text-slate-500">Luminosité</p>
+        <div class="py-10 grid-cols-2 py-30 pr-2 grid md:grid-rows-1 gap-10">
+            <div class =  " py-5 px-5 col-auto bg-green-200 rounded-md drop-shadow-2xl text-center font-semibold">Intensité de la luminosité :<span class="font-extrabold" > 37%</span></div>
+        <div class =  "col-auto bg-green-200 rounded-md drop-shadow-2xl text-center">
+            <div class=" col-2 py-5 font-semibold"> Intensité seuil : 
+            <div class="px-5"><input class=" rounded-lg overflow-hidden appearance-none bg-green-400 h-3 w-100"  type="range" value="seuil" min="1" max="100" oninput="this.nextElementSibling.value = this.value"><output>seuil</output></div>
             </div>
-
-            <div></div>
-
         </div>
-
-        <canvas id="healthChart" width="550" height="300"></canvas>
+    </div>
+    
+        <p class="pt-10 text-center font-extrabold text-slate-500"> Commandes et transmission</p>
+        <div class="py-10 grid-cols-2 py-30 pr-2 grid md:grid-rows-1 gap-10">
+        
+        <div class=" col-auto bg-green-200 rounded-md drop-shadow-2xl px-5 py-5 text-center font-semibold">Délai d'envoi de données (minutes):<div class="pt-2"> <input class="bg-green-400" type="number"> <div class="pt-2"></div><input class=" px-2 py-2 rounded-full bg-cyan-600 hover:bg-cyan-800 text-zinc-50" type="button" id="script" name = "scriptbutton" value="Valider" onclick="goPython()"></div>
+        </div>
+        <input class =" col-auto  rounded-full hover:bg-cyan-800 focus:outline-none focus:ring-0 transition duration-150 ease-in-out bg-cyan-600 text-zinc-50" type="button" id='script' name="scriptbutton" value=" Arroser Derrick" onclick="goPython()">
+        
+        </div>
+        
+        
+        <script>
+              async function goPython () {
+              const resp = await fetch(`${document.location.protocol }//${document.location.host}/notification`);
+              if (!resp.ok) throw "Request error";
+                console.log("finished python script");
+              }
+        </script>
 
         {% endblock %}
     </body>
