--- a/templates/settings.html
+++ b/templates/settings.html
@@ -30,6 +30,8 @@
         
         <div class=" col-auto bg-green-200 rounded-md drop-shadow-2xl px-5 py-5 text-center font-semibold">Délai d'envoi de données (minutes):<div class="pt-2"> <input class="bg-green-400" type="number"> <div class="pt-2"></div><input class=" px-2 py-2 rounded-full bg-cyan-600 hover:bg-cyan-800 text-zinc-50" type="button" id="script" name = "scriptbutton" value="Valider" onclick="goPython()"></div>
         </div>
+         <div class=" col-auto bg-green-200 rounded-md drop-shadow-2xl px-5 py-5 text-center font-semibold">fréquence d'arrosage automatique (jour):<div class="pt-2"> <input class="bg-green-400" type="number"> <div class="pt-2"></div><input class=" px-2 py-2 rounded-full bg-cyan-600 hover:bg-cyan-800 text-zinc-50" type="button" id="script" name = "scriptbutton" value="Valider" onclick="goPython()"></div>
+        </div>
         <input class =" col-auto  rounded-full hover:bg-cyan-800 focus:outline-none focus:ring-0 transition duration-150 ease-in-out bg-cyan-600 text-zinc-50" type="button" id='script' name="scriptbutton" value=" Arroser Derrick" onclick="goPython()">
         
         </div>
