--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -52,9 +52,45 @@
                 </nav></strong>
             </div>
         </header>
+
         <div class="pl-60">
             {% block content%}
             {% endblock %}
         </div>
+
+
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <div class="container">
+            <div class="chatbox">
+                <div class="chatbox__support">
+                    <div class="chatbox__header">
+                        <div class="chatbox__image--header">
+                            <img src="{{ url_for('static', filename='favicon.ico') }}" alt="image" width="100" height="100">
+                        </div>
+                        <div class="chatbox__content--header">
+                            <h4 class="chatbox__heading--header">Derrick</h4>
+                            <p class="chatbox__description--header">Bonjour, je suis Derrick ! Comment puis-je vous aider ?</p>
+                        </div>
+                    </div>
+                    <div class="chatbox__messages">
+                        <div></div>
+                    </div>
+                    <div class="chatbox__footer">
+                        <input type="text" placeholder="Ecrivez un message...">
+                        <button class="chatbox__send--footer send__button">Envoyer</button>
+                    </div>
+                </div>
+                <div class="chatbox__button">
+                    <button><img src="{{ url_for('static', filename='chatbox-icon.svg') }}" /></button>
+                </div>
+            </div>
+        </div>
+        
+            <script>
+                $SCRIPT_ROOT = {{ request.script_root|tojson }};
+            </script>
+            <script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
+
+
     </body>
 </html>
