--- a/main/templates/weather.html
+++ b/main/templates/weather.html
@@ -127,7 +127,7 @@
                 {% if data %}
              
                 <br>
-                <h3>Weather Details:</h3>
+                <h3>Détails:</h3>
                 <hr>
                 <p class="weather-data-item">Température ressentie: <span class="weather-data-value">{{ data.temp_ressentie }} °C</span></p>
                 <p class="weather-data-item">Humidité: <span class="weather-data-value">{{ data.rh2m}} %</span>
